@@ -580,5 +580,12 @@ DBEnv Methods
    <http://www.oracle.com/technology/documentation/berkeley-db/db/
    api_c/log_stat.html>`__
 
+.. function:: txn_recover(flags=0)
 
+   Returns a list of tuples (GID, TXN) of transactions prepared but
+   still unresolved. This is used while doing environment recovery in an
+   application using distributed transactions.
+   `More info...
+   <http://www.oracle.com/technology/documentation/berkeley-db/db/
+   api_c/txn_recover.html>`__
 
